--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <!--Central-->
 <div class="container-fluid">
 
-  <div class="row cor-fundo d-flex align-items-center ">
+  <div class="row cor-fundo d-flex align-items-center">
     <div class="col-md-6">
       <div class="row d-flex justify-content-center">
         <div class="col-md-6 text-white">
@@ -147,13 +147,13 @@
         <div class="form-group">
           <label for="titulo">Título</label>
           <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
-            placeholder="Minimo de 6 caracteres">
+            placeholder="Mínimo de 6 caracteres">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
           <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"
-            placeholder="Minimo de 20 caracteres">></textarea>
+            placeholder="Escreva sobre sua causa e não esqueça de colocar suas informações de contato. Mínimo de 20 caracteres">></textarea>
         </div>
 
         <div class="form-group">
