--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light cor-fundo">
+<nav class="navbar navbar-expand-lg navbar-light cor-nav shadow">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,8 +8,8 @@
       <li class="nav-item active">
         <img src="{{foto}}" alt="imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
       </li>
-      <li class="nav-item pl-3">
-        <p class="m-0 font-weight-bold text-white fs-16" >Olá {{nome}}</p>
+      <li class="nav-item pl-3 ml-3">
+        <p class="m-0 font-weight-bold text-white fs-16" >Olá, {{nome}}</p>
       </li>
 
       <li  class="nav-item pl-3">
