--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -13,7 +13,7 @@
         <div class="col-md-6">
           <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem" data-toggle="modal"
             data-target="#novaPostagem">Nova Postagem</button>
-          <a  class="btn btn-outline-light" href="#postagens">
+          <a class="btn btn-outline-light" href="#postagens">
             Ver Postagens
           </a>
         </div>
@@ -75,6 +75,11 @@
             <p class="card-text">{{item.texto}}.</p>
             <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
             <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+            <input type="checkbox" name="favorite" id="favorite">
+            <label for="favorite">
+              <mat-icon class='liked' *ngIf="data.liked" (click)=setLiked()>favorite</mat-icon>
+              <mat-icon *ngIf="!data.liked" (click)=setLiked()>favorite_border</mat-icon>
+            </label>
           </div>
         </div>
       </div>
