Botão Like - Implementação Visual

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
+<!--
 <app-menu *ngIf = 'auth.logado()'></app-menu>
 
 <router-outlet></router-outlet>
 
 <app-footer *ngIf = 'auth.logado()'></app-footer>
+-->
+
+<app-inicio></app-inicio>
+
 
 
 
