--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -75,6 +75,21 @@
             <p class="card-text">{{item.texto}}.</p>
             <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
             <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+
+            <button class="btn btn-like">
+              <span class="btn-icon btn--icon-default">
+                  <span class="fa fa-heart"></span>
+              </span>
+              <span class="btn-icon btn--icon-liked">
+                  <span class="fa fa-heart"></span>
+              </span>
+              <span class="btn-content  btn-content--liked">
+                  Liked
+              </span>
+              <span class="btn-content btn-content--default">
+                  Like
+              </span>
+          </button>
           </div>
         </div>
       </div>
