--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -13,3 +13,116 @@
 .cor-jumbo{
   background-color: #1abc9c;
 }
+
+/*Like*/
+
+:root {
+  --red: rgb(209, 3, 3);
+  --white: #fff;
+  --black: #000;
+}
+
+
+.btn-like {
+
+  outline: 0;
+  border: 2px solid #ccc;
+  color: #000;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  /*display:flex;*/
+  
+  justify-content: space-between;
+  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.05);
+  transition: 2.5s cubic-bezier(.21,.04,.26,.99);
+
+
+  padding: 1.0rem 1.0rem 1.0rem 1.0rem;
+  font-size: 1rem;
+  border-radius: 10px;
+  background: #fff;
+  transition: 1.5s cubic-bezier(.21,.04,.26,.99);
+}
+
+.btn-like:hover {
+  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.2);
+  border-color: var(--red);
+}
+
+.btn-like.liked {
+  background: var(--red);
+  border-color: var(--red);
+}
+
+.btn-like.liked:hover {
+  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.2);
+  border-color: var(--red);
+}
+
+/*-- Button Icon -- */
+.btn-icon {
+  display: inline-block;
+  width: 10px;
+  position: absolute;
+  left: 1.5rem;
+  transition: 1s cubic-bezier(.21,.04,.26,.99);
+  transform: rotate(0deg)
+}
+
+.btn-like:hover .btn-icon {
+  color: var(--red);
+}
+
+.btn-like.liked:hover .btn-icon {
+  color: var(--black);
+}
+
+.liked .btn--icon-default {
+  transform: rotate(-90deg)
+}
+
+.btn-like:not(.liked).btn--icon-liked {
+  transform: rotate(-90deg)
+}
+
+.liked .btn--icon-default,
+.btn--icon-liked {
+    opacity: 0;
+    color: #fff;
+    position: absolute;
+}
+
+.btn--icon-default,
+.liked .btn--icon-liked {
+    opacity: 1;
+    left: 1.5rem;
+}
+
+/*-- Button Content -- */
+.btn-content {
+  transition: transform 0.1s ease;
+  display: inline-block;
+  /*position: absolute;
+  right: 0;*/
+}
+
+.liked .btn-content {
+  color: var(--white);
+}
+.btn:hover.liked .btn-content {
+  color: var(--black);
+}
+.btn:not(.liked) .btn-content--liked {
+  transform: translate(110px)
+}
+
+/*.btn:not(.liked) .btn-content--default {
+  transform: translate(-56px)
+}*/
+
+.liked .btn-content--default {
+  transform: translate(24px)
+}
+
+
