missao, visao, valores e parceiro - adicionados textos.

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -156,10 +156,7 @@
       <div class="card-body">
         <h5 class="card-title text-success">Missão</h5>
         <p class="card-text">
-          Lorem ipsum commodo tempor mollis arcu placerat curabitur ipsum sodales, senectus non orci eu at turpis felis
-          platea, morbi vitae dolor ut auctor vel felis pellentesque. lorem cubilia id ut fames sagittis auctor odio
-          elit, vel fermentum sollicitudin eu augue molestie neque nisi inceptos, condimentum in hendrerit eros nostra
-          sodales lacinia.
+          Entregar qualidade de vida às pessoas que necessitam.
         </p>
       </div>
     </div>
@@ -168,10 +165,8 @@
       <div class="card-body">
         <h5 class="card-title text-success">Visão</h5>
         <p class="card-text">
-          Lorem ipsum commodo tempor mollis arcu placerat curabitur ipsum sodales, senectus non orci eu at turpis felis
-          platea, morbi vitae dolor ut auctor vel felis pellentesque. lorem cubilia id ut fames sagittis auctor odio
-          elit, vel fermentum sollicitudin eu augue molestie neque nisi inceptos, condimentum in hendrerit eros nostra
-          sodales lacinia.
+          Ser a maior e melhor rede social do mundo, oferecendo aos nosso usuários uma relação duradoura, com foco no combate
+          a fome.
         </p>
       </div>
     </div>
@@ -179,12 +174,28 @@
       <img class="card-img-top" src="../../assets/img/valores.png" alt="valores">
       <div class="card-body">
         <h5 class="card-title text-success">Valores</h5>
-        <p class="card-text">
-          Lorem ipsum commodo tempor mollis arcu placerat curabitur ipsum sodales, senectus non orci eu at turpis felis
-          platea, morbi vitae dolor ut auctor vel felis pellentesque. lorem cubilia id ut fames sagittis auctor odio
-          elit, vel fermentum sollicitudin eu augue molestie neque nisi inceptos, condimentum in hendrerit eros nostra
-          sodales lacinia.
-        </p>
+
+          <ul>
+            <li>
+              Transparência
+            </li>
+            <li>
+              Construímos juntos
+            </li>
+            <li>
+              Estamos 1% melhores todos os dias
+            </li>
+            <li>
+              Ética
+            </li>
+            <li>
+              Responsabilidade social
+            </li>
+            <li>
+              Sustentabilidade
+            </li>
+          </ul>
+
       </div>
     </div>
   </div>
@@ -200,17 +211,8 @@
         <div class="col-md-6">
           <h3 class="text-success">Parceria</h3>
           <p>
-            Lorem ipsum commodo tempor mollis arcu placerat curabitur ipsum sodales, senectus non orci eu at turpis
-            felis
-            platea, morbi vitae dolor ut auctor vel felis pellentesque. lorem cubilia id ut fames sagittis auctor odio
-            elit,
-            vel fermentum sollicitudin eu augue molestie neque nisi inceptos, condimentum in hendrerit eros nostra
-            sodales
-            lacinia. venenatis sem neque nisl vel hac convallis cubilia, nisl tellus amet tempor lacinia congue sagittis
-            luctus, aptent sit tellus consequat curabitur elit. porttitor leo dictum tempus condimentum felis turpis
-            varius
-            etiam sit, facilisis in mollis integer quis fermentum eleifend feugiat, ut tempus gravida at nam fermentum
-            convallis arcu.
+            A Generation Brasil, empresa responsável por transformar sistemas de educação para o emprego de maneira a preparar, colocar e apoiar pessoas em carreiras transformadoras que, de outra forma, seriam inacessíveis; Nós prestou total apoio para o
+            desenvolvimento e criação da nossa rede social, acreditando sempre em nossos propósitos e nos capacitando para o mesmo!
           </p>
         </div>
 
