cor card parceria branca

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -205,7 +205,7 @@
 <!--parceiro-->
 <div class="container d-flex justify-content-center margem-parceria">
 
-  <div class="card bg-light border-light shadow">
+  <div class="card border-light shadow">
     <div class="card-body mt-5 mb-5 ml-5" id="parceiro">
       <div class="row align-items-center">
         <div class="col-md-6">
