Revisão de Textos e Hover de Cards

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -130,11 +130,12 @@
     <div class="col-md-6">
       <h3 class="text-success">O que é a <u><em>Alimenta</em></u>?</h3>
       <p>
-        A <u><em>Alimenta</em></u> é uma rede social que promova o contato e o diálogo entre fazendeiros, empresas do
-        ramo de alimentação ou produção com ONGs que são responsáveis por cuidar e alimentar pessoas que passam
-        necessidades. Esse contato será promovido justamente para que as ONGs tenham doações de alimentos e até mesmo
-        ajuda para construírem suas próprias "plantações" e poder ter mais um tipo de fonte para alimentar as pessoas,
-        podendo até mesmo gerar trabalho para pessoas da comunidade em relação ao cuidado e cultivo das plantações.
+        A <u><em>Alimenta</em></u> é uma rede social que promove o contato e o diálogo entre produtores e empresas do
+        ramo de alimentação com ONGs que são responsáveis por cuidar e alimentar pessoas que passam
+        necessidades. 
+        
+        Esse contato é promovido justamente para que as ONGs tenham doações de alimentos ou até mesmo
+        auxílio para que construam suas próprias plantações, atingindo autossuficiência em produção de alimentos e até mesmo podendo gerando trabalho para pessoas da comunidade.
       </p>
     </div>
     <div class="col-md-6">
@@ -156,7 +157,7 @@
       <div class="card-body">
         <h5 class="card-title text-success">Missão</h5>
         <p class="card-text">
-          Entregar qualidade de vida às pessoas que necessitam.
+          Ajudar no combate à fome e insegurança alimentar, de acordo com o ODS-2 da Organização das Nações Unidas.
         </p>
       </div>
     </div>
@@ -165,8 +166,7 @@
       <div class="card-body">
         <h5 class="card-title text-success">Visão</h5>
         <p class="card-text">
-          Ser a maior e melhor rede social do mundo, oferecendo aos nosso usuários uma relação duradoura, com foco no combate
-          a fome.
+          Ser o melhor espaço digital colaborativo, oferecendo um ambiente de confiança, empatia e transparência para nossos usuários.
         </p>
       </div>
     </div>
@@ -177,22 +177,23 @@
 
           <ul>
             <li>
+              Sustentabilidade
+            </li>
+            <li>
               Transparência
             </li>
             <li>
-              Construímos juntos
-            </li>
-            <li>
-              Estamos 1% melhores todos os dias
+              Colaboração
             </li>
             <li>
               Ética
+              
             </li>
             <li>
-              Responsabilidade social
+              Responsabilidade Social
             </li>
             <li>
-              Sustentabilidade
+              Melhoria Constante
             </li>
           </ul>
 
@@ -211,8 +212,7 @@
         <div class="col-md-6">
           <h3 class="text-success">Parceria</h3>
           <p>
-            A Generation Brasil, empresa responsável por transformar sistemas de educação para o emprego de maneira a preparar, colocar e apoiar pessoas em carreiras transformadoras que, de outra forma, seriam inacessíveis; Nós prestou total apoio para o
-            desenvolvimento e criação da nossa rede social, acreditando sempre em nossos propósitos e nos capacitando para o mesmo!
+            Este projeto tem o apoio da Generation Brasil, ONG responsável por qualificar pessoas no mercado de TI, aproximando pessoas de carreiras transformadoras que, de outra forma, seriam inacessíveis. A Generation Brasil nos prestou total apoio para o desenvolvimento da nossa rede social, acreditando sempre em nossos propósitos!
           </p>
         </div>
 
