--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -78,7 +78,7 @@
               </div>
               <h5 class="card-title m-0 mt-4">{{item.titulo}}</h5>
               <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
-              <p class="card-text">{{item.texto}}.</p>
+              <p class="card-text">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
               <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
 
@@ -108,7 +108,7 @@
       <div class="card-columns">
 
         <div class="card d-inline-block" id="cards_landscape_wrap-2"
-          *ngFor='let item of listaPostagens | orderBy : key : reverse'>
+          *ngFor='let item of user.postagem | orderBy : key : reverse'>
           <div class="card-flyer">
             <div class="card-body">
 
@@ -118,19 +118,20 @@
 
               <h5 class="card-title m-0 mt-4">{{item.titulo}}</h5>
               <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
-              <p class="card-text">{{item.texto}}.</p>
+              <p class="card-text">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
 
               <div class="row justify-content-center">
                 <button [routerLink]="['/postagem-edit', item.id]" type="button" class="btn btn-outline-info mr-2">
                   Editar
                 </button>
-  
-                <button [routerLink]="['/postagem-delete', item.id]"  type="button" class="btn btn-outline-danger shadow font-raleway justify-content-center">
+
+                <button [routerLink]="['/postagem-delete', item.id]" type="button"
+                  class="btn btn-outline-danger shadow font-raleway justify-content-center">
                   Apagar
                 </button>
               </div>
-              
+
             </div>
           </div>
         </div>
@@ -157,9 +158,11 @@
 
           <div class="card-flyer">
             <div class="card-body">
-              <img class="card-img-top" src="{{item.imagem}}" alt="Imagem de capa da postagem">
+              <div class="image-box">
+                <img class="card-img-top mx-auto d-block" src="{{item.imagem}}" alt="Imagem de capa da postagem">
+              </div>
               <h5 class="card-title m-0 mt-4">{{item.titulo}}</h5>
-              <p class="card-text">{{item.texto}}.</p>
+              <p class="card-text">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
 
               <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
@@ -188,65 +191,65 @@
     </div>
 
 
-      <!--/Cards-->
+    <!--/Cards-->
 
-      <!--/Tabs-->
-      <!--/Visualização de Postagens-->
+    <!--/Tabs-->
+    <!--/Visualização de Postagens-->
 
-      <!-- Modal -->
-      <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
-        aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
+      aria-hidden="true">
 
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-                <span aria-hidden="true">&times;</span>
-              </button>
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="TituloModalCentralizado">Nova Postagem</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+            <div class="form-group">
+              <label for="titulo">Título</label>
+              <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
+                placeholder="Mínimo de 6 caracteres">
             </div>
-            <div class="modal-body">
 
-              <div class="form-group">
-                <label for="titulo">Título</label>
-                <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
-                  placeholder="Mínimo de 6 caracteres">
-              </div>
-
-              <div class="form-group">
-                <label for="texto">Texto</label>
-                <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"
-                  placeholder="Escreva sobre sua causa e não esqueça de colocar suas informações de contato. Mínimo de 20 caracteres">></textarea>
-              </div>
-
-              <div class="form-group">
-                <label for="titulo">Imagem</label>
-                <input [(ngModel)]='postagem.imagem' type="text" class="form-control" id="imagem"
-                  placeholder="Insira o link de uma imagem ilustrativa">
-              </div>
-
-
-              <div class="form-group">
-                <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um
-                    novo</a>:</label>
-                <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)='findByIdTema()'>
-                  <option *ngFor='let item of listaTemas' value="{{item.id}}">
-                    {{item.descricao}}
-                  </option>
-                </select>
-              </div>
-
-
-
+            <div class="form-group">
+              <label for="texto">Texto</label>
+              <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"
+                placeholder="Escreva sobre sua causa e não esqueça de colocar suas informações de contato. Mínimo de 20 caracteres">></textarea>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">
-                Cancelar
-              </button>
-              <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">
-                Publicar
-              </button>
+
+            <div class="form-group">
+              <label for="titulo">Imagem</label>
+              <input [(ngModel)]='postagem.imagem' type="text" class="form-control" id="imagem"
+                placeholder="Insira o link de uma imagem ilustrativa">
             </div>
+
+
+            <div class="form-group">
+              <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um
+                  novo</a>:</label>
+              <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                <option *ngFor='let item of listaTemas' value="{{item.id}}">
+                  {{item.descricao}}
+                </option>
+              </select>
+            </div>
+
+
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Cancelar
+            </button>
+            <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">
+              Publicar
+            </button>
           </div>
         </div>
       </div>
+    </div>
