--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -33,9 +33,9 @@
             <label for="tipo">Tipo de Usuário</label>
             <select class="form-control font-size mb-3" name="tipo" id="tipo" (change)='tipoUser($event)'>
               <option>Selecione um tipo de usuário</option>
-              <option value="normal">ONG</option>
-              <option value="adm">Agricultor</option>
-              <option value="adm">Empresa</option>
+              <option value="normal">ONGs</option>
+              <option value="adm">Agricultores</option>
+              <option value="adm">Empresas</option>
             </select>
 
             <div class="d-flex justify-content-center mt-3">
